<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:screenOrientation="landscape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/app_margin"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_label_size"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:padding="@dimen/main_label_size"
            android:text="@string/saisir_Joueur1"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_player1"
            style="@style/Widget.Player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:hint="Player 1"
            background="None">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_player1_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/blue"
                android:textAlignment="center"
                android:maxLines="1"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_label_size"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:padding="@dimen/main_label_size"
            android:text="@string/saisir_Joueur2"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_player2"
            style="@style/Widget.Player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="Player 2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_player2_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:maxLines="1"
                android:background="@color/red"
                android:textAlignment="center"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"></RelativeLayout>

    <Button
        android:id="@+id/main_button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/main_button_play" />

</LinearLayout>
